FAlloyParser.py
# Generated from FAlloy.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class FAlloyParser ( Parser ):

    grammarFileName = "FAlloy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'module'", "'['", "'exactly'", "','", 
                     "']'", "'private'", "'open'", "'as'", "'fact'", "'assert'", 
                     "'fun'", "'.'", "'('", "')'", "':'", "'pred'", "'run'", 
                     "'check'", "'for'", "'expect'", "'0'", "'1'", "'but'", 
                     "'int'", "'seq'", "'sig'", "'{'", "'}'", "'enum'", 
                     "'abstract'", "'lone'", "'one'", "'some'", "'extends'", 
                     "'in'", "'+'", "'let'", "'!'", "'not'", "'=>'", "'implies'", 
                     "'else'", "'-'", "'none'", "'iden'", "'univ'", "'Int'", 
                     "'seq/Int'", "'@'", "'disj'", "'fuzzy'", "'='", "'all'", 
                     "'no'", "'sum'", "'slightly'", "'half'", "'mostly'", 
                     "'fully'", "'is'", "'||'", "'or'", "'&&'", "'and'", 
                     "'&'", "'<=>'", "'iff'", "'++'", "'<:'", "':>'", "'<<'", 
                     "'>>'", "'>>>'", "'set'", "'->'", "'<'", "'>'", "'=<'", 
                     "'>='", "'#'", "'~'", "'*'", "'^'", "'|'", "'this'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "ID" ]

    RULE_specification = 0
    RULE_module = 1
    RULE_open = 2
    RULE_paragraph = 3
    RULE_factDecl = 4
    RULE_assertDecl = 5
    RULE_funDecl = 6
    RULE_cmdDecl = 7
    RULE_scope = 8
    RULE_typescope = 9
    RULE_sigDecl = 10
    RULE_enumDecl = 11
    RULE_sigQual = 12
    RULE_sigExt = 13
    RULE_expr = 14
    RULE_declOrFuzzyDecl = 15
    RULE_decl = 16
    RULE_fuzzyDecl = 17
    RULE_letDecl = 18
    RULE_quant = 19
    RULE_fuzzyUnOp = 20
    RULE_fuzzyCompareOp = 21
    RULE_binOp = 22
    RULE_arrowOp = 23
    RULE_compareOp = 24
    RULE_unOp = 25
    RULE_block = 26
    RULE_blockOrBar = 27
    RULE_name = 28
    RULE_ref = 29

    ruleNames =  [ "specification", "module", "open", "paragraph", "factDecl", 
                   "assertDecl", "funDecl", "cmdDecl", "scope", "typescope", 
                   "sigDecl", "enumDecl", "sigQual", "sigExt", "expr", "declOrFuzzyDecl", 
                   "decl", "fuzzyDecl", "letDecl", "quant", "fuzzyUnOp", 
                   "fuzzyCompareOp", "binOp", "arrowOp", "compareOp", "unOp", 
                   "block", "blockOrBar", "name", "ref" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    NUMBER=87
    ID=88

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SpecificationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module(self):
            return self.getTypedRuleContext(FAlloyParser.ModuleContext,0)


        def open(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FAlloyParser.OpenContext)
            else:
                return self.getTypedRuleContext(FAlloyParser.OpenContext,i)


        def paragraph(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FAlloyParser.ParagraphContext)
            else:
                return self.getTypedRuleContext(FAlloyParser.ParagraphContext,i)


        def getRuleIndex(self):
            return FAlloyParser.RULE_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecification" ):
                listener.enterSpecification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecification" ):
                listener.exitSpecification(self)




    def specification(self):

        localctx = FAlloyParser.SpecificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FAlloyParser.T__0:
                self.state = 60
                self.module()


            self.state = 66
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 63
                    self.open() 
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FAlloyParser.T__5) | (1 << FAlloyParser.T__8) | (1 << FAlloyParser.T__9) | (1 << FAlloyParser.T__10) | (1 << FAlloyParser.T__15) | (1 << FAlloyParser.T__16) | (1 << FAlloyParser.T__17) | (1 << FAlloyParser.T__25) | (1 << FAlloyParser.T__28) | (1 << FAlloyParser.T__29) | (1 << FAlloyParser.T__30) | (1 << FAlloyParser.T__31) | (1 << FAlloyParser.T__32))) != 0) or _la==FAlloyParser.T__84 or _la==FAlloyParser.ID:
                self.state = 69
                self.paragraph()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FAlloyParser.NameContext)
            else:
                return self.getTypedRuleContext(FAlloyParser.NameContext,i)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(FAlloyParser.NUMBER)
            else:
                return self.getToken(FAlloyParser.NUMBER, i)

        def getRuleIndex(self):
            return FAlloyParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)




    def module(self):
        localctx = FAlloyParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(FAlloyParser.T__0)
            self.state = 76
            self.name()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FAlloyParser.T__1:
                self.state = 77
                self.match(FAlloyParser.T__1)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__2:
                    self.state = 78
                    self.match(FAlloyParser.T__2)


                self.state = 81
                self.name()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FAlloyParser.T__3:
                    self.state = 82
                    self.match(FAlloyParser.T__3)
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==FAlloyParser.T__2:
                        self.state = 83
                        self.match(FAlloyParser.T__2)


                    self.state = 86
                    self.match(FAlloyParser.NUMBER)
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 92
                self.match(FAlloyParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OpenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FAlloyParser.NameContext)
            else:
                return self.getTypedRuleContext(FAlloyParser.NameContext,i)


        def ref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FAlloyParser.RefContext)
            else:
                return self.getTypedRuleContext(FAlloyParser.RefContext,i)


        def getRuleIndex(self):
            return FAlloyParser.RULE_open

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpen" ):
                listener.enterOpen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpen" ):
                listener.exitOpen(self)




    def open(self):

        localctx = FAlloyParser.OpenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_open)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FAlloyParser.T__5:
                self.state = 96
                self.match(FAlloyParser.T__5)


            self.state = 99
            self.match(FAlloyParser.T__6)
            self.state = 100
            self.name()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FAlloyParser.T__1:
                self.state = 101
                self.match(FAlloyParser.T__1)

                self.state = 102
                self.ref()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==FAlloyParser.T__3:
                    self.state = 103
                    self.match(FAlloyParser.T__3)
                    self.state = 104
                    self.ref()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 110
                self.match(FAlloyParser.T__4)


            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FAlloyParser.T__7:
                self.state = 114
                self.match(FAlloyParser.T__7)
                self.state = 115
                self.name()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParagraphContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factDecl(self):
            return self.getTypedRuleContext(FAlloyParser.FactDeclContext,0)


        def assertDecl(self):
            return self.getTypedRuleContext(FAlloyParser.AssertDeclContext,0)


        def funDecl(self):
            return self.getTypedRuleContext(FAlloyParser.FunDeclContext,0)


        def cmdDecl(self):
            return self.getTypedRuleContext(FAlloyParser.CmdDeclContext,0)


        def enumDecl(self):
            return self.getTypedRuleContext(FAlloyParser.EnumDeclContext,0)


        def sigDecl(self):
            return self.getTypedRuleContext(FAlloyParser.SigDeclContext,0)


        def getRuleIndex(self):
            return FAlloyParser.RULE_paragraph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParagraph" ):
                listener.enterParagraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParagraph" ):
                listener.exitParagraph(self)




    def paragraph(self):

        localctx = FAlloyParser.ParagraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paragraph)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.factDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.assertDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.funDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.cmdDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.enumDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                self.sigDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(FAlloyParser.BlockContext,0)


        def name(self):
            return self.getTypedRuleContext(FAlloyParser.NameContext,0)


        def getRuleIndex(self):
            return FAlloyParser.RULE_factDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactDecl" ):
                listener.enterFactDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactDecl" ):
                listener.exitFactDecl(self)




    def factDecl(self):

        localctx = FAlloyParser.FactDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_factDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(FAlloyParser.T__8)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FAlloyParser.T__84 or _la==FAlloyParser.ID:
                self.state = 127
                self.name()


            self.state = 130
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssertDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(FAlloyParser.BlockContext,0)


        def name(self):
            return self.getTypedRuleContext(FAlloyParser.NameContext,0)


        def getRuleIndex(self):
            return FAlloyParser.RULE_assertDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssertDecl" ):
                listener.enterAssertDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssertDecl" ):
                listener.exitAssertDecl(self)




    def assertDecl(self):

        localctx = FAlloyParser.AssertDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assertDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(FAlloyParser.T__9)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FAlloyParser.T__84 or _la==FAlloyParser.ID:
                self.state = 133
                self.name()


            self.state = 136
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(FAlloyParser.NameContext,0)


        def expr(self):
            return self.getTypedRuleContext(FAlloyParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(FAlloyParser.BlockContext,0)


        def ref(self):
            return self.getTypedRuleContext(FAlloyParser.RefContext,0)


        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FAlloyParser.DeclContext)
            else:
                return self.getTypedRuleContext(FAlloyParser.DeclContext,i)


        def getRuleIndex(self):
            return FAlloyParser.RULE_funDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunDecl" ):
                listener.enterFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunDecl" ):
                listener.exitFunDecl(self)




    def funDecl(self):

        localctx = FAlloyParser.FunDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funDecl)
        self._la = 0 # Token type
        try:
            self.state = 264
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,34,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5:
                    self.state = 138
                    self.match(FAlloyParser.T__5)


                self.state = 141
                self.match(FAlloyParser.T__10)
                self.state = 145
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 142
                    self.ref()
                    self.state = 143
                    self.match(FAlloyParser.T__11)


                self.state = 147
                self.name()
                self.state = 148
                self.match(FAlloyParser.T__12)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5 or _la==FAlloyParser.T__49 or _la==FAlloyParser.T__84 or _la==FAlloyParser.ID:
                    self.state = 149
                    self.decl()
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==FAlloyParser.T__3:
                        self.state = 150
                        self.match(FAlloyParser.T__3)
                        self.state = 151
                        self.decl()
                        self.state = 156
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 159
                self.match(FAlloyParser.T__13)
                self.state = 160
                self.match(FAlloyParser.T__14)
                self.state = 161
                self.expr(0)
                self.state = 162
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5:
                    self.state = 164
                    self.match(FAlloyParser.T__5)


                self.state = 167
                self.match(FAlloyParser.T__10)
                self.state = 171
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                if la_ == 1:
                    self.state = 168
                    self.ref()
                    self.state = 169
                    self.match(FAlloyParser.T__11)


                self.state = 173
                self.name()
                self.state = 174
                self.match(FAlloyParser.T__1)
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5 or _la==FAlloyParser.T__49 or _la==FAlloyParser.T__84 or _la==FAlloyParser.ID:
                    self.state = 175
                    self.decl()
                    self.state = 180
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==FAlloyParser.T__3:
                        self.state = 176
                        self.match(FAlloyParser.T__3)
                        self.state = 177
                        self.decl()
                        self.state = 182
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 185
                self.match(FAlloyParser.T__4)
                self.state = 186
                self.match(FAlloyParser.T__14)
                self.state = 187
                self.expr(0)
                self.state = 188
                self.block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5:
                    self.state = 190
                    self.match(FAlloyParser.T__5)


                self.state = 193
                self.match(FAlloyParser.T__10)
                self.state = 197
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
                if la_ == 1:
                    self.state = 194
                    self.ref()
                    self.state = 195
                    self.match(FAlloyParser.T__11)


                self.state = 199
                self.name()
                self.state = 200
                self.match(FAlloyParser.T__14)
                self.state = 201
                self.expr(0)
                self.state = 202
                self.block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5:
                    self.state = 204
                    self.match(FAlloyParser.T__5)


                self.state = 207
                self.match(FAlloyParser.T__15)
                self.state = 211
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
                if la_ == 1:
                    self.state = 208
                    self.ref()
                    self.state = 209
                    self.match(FAlloyParser.T__11)


                self.state = 213
                self.name()
                self.state = 214
                self.match(FAlloyParser.T__12)
                self.state = 223
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5 or _la==FAlloyParser.T__49 or _la==FAlloyParser.T__84 or _la==FAlloyParser.ID:
                    self.state = 215
                    self.decl()
                    self.state = 220
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==FAlloyParser.T__3:
                        self.state = 216
                        self.match(FAlloyParser.T__3)
                        self.state = 217
                        self.decl()
                        self.state = 222
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 225
                self.match(FAlloyParser.T__13)
                self.state = 226
                self.block()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 229
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5:
                    self.state = 228
                    self.match(FAlloyParser.T__5)


                self.state = 231
                self.match(FAlloyParser.T__15)
                self.state = 235
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,29,self._ctx)
                if la_ == 1:
                    self.state = 232
                    self.ref()
                    self.state = 233
                    self.match(FAlloyParser.T__11)


                self.state = 237
                self.name()
                self.state = 238
                self.match(FAlloyParser.T__1)
                self.state = 247
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5 or _la==FAlloyParser.T__49 or _la==FAlloyParser.T__84 or _la==FAlloyParser.ID:
                    self.state = 239
                    self.decl()
                    self.state = 244
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==FAlloyParser.T__3:
                        self.state = 240
                        self.match(FAlloyParser.T__3)
                        self.state = 241
                        self.decl()
                        self.state = 246
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 249
                self.match(FAlloyParser.T__4)
                self.state = 250
                self.block()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 253
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==FAlloyParser.T__5:
                    self.state = 252
                    self.match(FAlloyParser.T__5)


                self.state = 255
                self.match(FAlloyParser.T__15)
                self.state = 259
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,33,self._ctx)
                if la_ == 1:
                    self.state = 256
                    self.ref()
                    self.state = 257
                    self.match(FAlloyParser.T__11)


                self.state = 261
                self.name()
                self.state = 262
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scope(self):
            return self.getTypedRuleContext(FAlloyParser.ScopeContext,0)


        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FAlloyParser.NameContext)
            else:
                return self.getTypedRuleContext(FAlloyParser.NameContext,i)


        def block(self):
            return self.getTypedRuleContext(FAlloyParser.BlockContext,0)


        def getRuleIndex(self):
            return FAlloyParser.RULE_cmdDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdDecl" ):
                listener.enterCmdDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdDecl" ):
                listener.exitCmdDecl(self)




    def cmdDecl(self):

        localctx = FAlloyParser.CmdDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cmdDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 269
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==FAlloyParser.T__84 or _la==FAlloyParser.ID:
                self.state = 266
                self.name()
                self.state = 267
                self.match(FAlloyParser.T__14)


            self.state = 271
            _la = self._input.LA(1)
            if not(_la==FAlloyParser.T__16 or _la==FAlloyParser.T__17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 274
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FAlloyParser.T__84, FAlloyParser.ID]:
                self.state = 272
                self.name()
                pass
            elif token in [FAlloyParser.T__26]:
                self.state = 273
                self.block()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 276
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(FAlloyParser.NUMBER, 0)
